--- a/Idea_platform/main/static/scss/style.scss
+++ b/Idea_platform/main/static/scss/style.scss
@@ -260,7 +260,7 @@ body {
 /*–––––––––––––––search–––––––––––––––*/
 
 .search-panel {
-  margin-top: 30px + 60px;
+  padding-top: 30px + 60px;
   .container {
     display: flex;
     justify-content: center;
@@ -276,7 +276,7 @@ body {
 /*–––––––––––––––proj–––––––––––––––*/
 
 .proj {
-  margin-top: 50px;
+  padding-top: 50px;
 
   .container {
     display: flex;
