--- a/Idea_platform/main/templates/main/base.html
+++ b/Idea_platform/main/templates/main/base.html
@@ -11,6 +11,7 @@
     {% block content2 %} {% endblock %}
   </head>
   <body>
+    {% block nav %}{% endblock %}
     {% block content %}{% endblock %}
   </body>
 </html>
