--- a/Idea_platform/main/static/css/style.css
+++ b/Idea_platform/main/static/css/style.css
@@ -373,6 +373,11 @@ body {
   padding-right: 6%;
   padding-left: 2%;
 }
+.filter form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .filter__need {
   display: block;
 }
