--- a/Idea_platform/main/templates/main/login.html
+++ b/Idea_platform/main/templates/main/login.html
@@ -12,7 +12,7 @@
 <div id="particles-js" class="bg"> 
   <main class="login">
     <div class="login__logo">
-      <div></div>
+      <a href= "{% url 'home' %}"></a>
     </div>
     <h1 class="login__title">Авторизация</h1>
 
