--- a/Idea_platform/main/static/css/style.css
+++ b/Idea_platform/main/static/css/style.css
@@ -203,8 +203,18 @@ body {
 }
 .header__logo {
   background: url(../img/logo2.png) center/100% no-repeat;
-  width: 140px;
-  height: 100%;
+  width: 130px;
+  height: 90%;
+}
+@media (max-width: 768px) {
+  .header__logo {
+    width: 105px;
+  }
+}
+@media (max-width: 425px) {
+  .header__logo {
+    width: 75px;
+  }
 }
 .header__add-project-button {
   background: #fff;
@@ -474,11 +484,11 @@ body {
   z-index: 10;
   transform: translate(-50%, -50%);
 }
-.login__logo div {
-  background: rgba(0, 0, 0, 0.1) center no-repeat;
+.login__logo a {
+  display: block;
+  background: url(../img/favikon.png) center/100% no-repeat;
   width: 50px;
   height: 50px;
-  border-radius: 100%;
   margin: auto;
 }
 .login__title {
