--- a/Idea_platform/main/templates/main/index.html
+++ b/Idea_platform/main/templates/main/index.html
@@ -11,7 +11,7 @@
 {% block content %}    
 <div class="header">
   <div class="container">
-    <div class="header__logo"></div>
+    <a href="{% url 'home' %}"  class="header__logo"></a>
     <a href="{% url 'add_idea' %}" class="header__add-project-button button">
       Добавить идею
     </a>
