--- a/Idea_platform/main/static/css/style.css
+++ b/Idea_platform/main/static/css/style.css
@@ -804,4 +804,42 @@ body {
 }
 .idea__tags {
   font-size: 25px;
+}
+
+/*––––––––––––––––––––––––––––––*/
+/*–––––––––––––––TEAM–––––––––––––––*/
+/*––––––––––––––––––––––––––––––*/
+.team .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.team__title {
+  font-size: 40px;
+  font-weight: 700;
+  padding-top: 100px;
+}
+.team__members {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+  text-align: center;
+}
+.team__item {
+  width: 20%;
+  background-color: #edf9fc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  padding-block: 20px;
+  border: 1.5px solid var(--sec-color-v2);
+}
+.team__text {
+  padding-block: 10px;
+  width: 80%;
+  border: 1.5px solid rgba(0, 0, 0, 0.2);
 }/*# sourceMappingURL=style.css.map */
