--- a/Idea_platform/main/static/css/style.css
+++ b/Idea_platform/main/static/css/style.css
@@ -842,4 +842,9 @@ body {
   padding-block: 10px;
   width: 80%;
   border: 1.5px solid rgba(0, 0, 0, 0.2);
+}
+.team__description {
+  text-align: center;
+  font-size: 20px;
+  width: 70%;
 }/*# sourceMappingURL=style.css.map */
