--- a/Idea_platform/main/templates/main/team.html
+++ b/Idea_platform/main/templates/main/team.html
@@ -47,13 +47,13 @@
     <div class="team__title">{{team.name}}</div>
     <div class="team__members">
 
-      {% comment %} {% for item in team %}
+      {% for item in AC %}
       <div class="team__item">
-        <div class="team__text">Алмаз</div>
-        <div class="team__text">Абдулхаков</div>
+        <div class="team__text">{{user}}</div>
+        <div class="team__text">{{user2}}</div>
         <div class="team__text">dsadsa@mail.ru</div>
       </div>
-      {% endfor %} {% endcomment %}
+      {% endfor %}
 
       <div class="team__item">
         <div class="team__text">Алмаз</div>
