--- a/Idea_platform/main/static/css/style.css
+++ b/Idea_platform/main/static/css/style.css
@@ -711,6 +711,28 @@ body {
     width: 100%;
   }
 }
+.profile__teams {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.profile__teams-title {
+  font-weight: 700;
+  font-size: var(--font-size-title);
+}
+.profile__team {
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding-block: 5px;
+  transition: all 0.2s;
+}
+.profile__team:hover {
+  background: rgba(0, 0, 0, 0.15);
+}
 
 /*––––––––––––––––––––––––––––––*/
 /*–––––––––––––––ADD_IDEA–––––––––––––––*/
@@ -847,4 +869,43 @@ body {
   text-align: center;
   font-size: 20px;
   width: 70%;
+}
+
+/*––––––––––––––––––––––––––––––*/
+/*–––––––––––––––users–––––––––––––––*/
+/*––––––––––––––––––––––––––––––*/
+.users {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.users__title {
+  font-size: 40px;
+  font-weight: 700;
+  padding-top: 100px;
+}
+.users__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 100%;
+  padding-top: 20px;
+  padding-inline: 20px;
+}
+.users__item {
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  width: 10.5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  padding-block: 5px;
+  transition: all 0.2s;
+}
+.users__item:hover {
+  background: rgba(0, 0, 0, 0.15);
+}
+.users__info {
+  font-size: 18px;
 }/*# sourceMappingURL=style.css.map */
