--- a/Idea_platform/main/static/scss/style.scss
+++ b/Idea_platform/main/static/scss/style.scss
@@ -834,6 +834,35 @@ body {
       width: 100%;
     }
   }
+
+  &__teams {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  &__teams-title {
+    font-weight: 700;
+    font-size: var(--font-size-title);
+  }
+
+  &__team {
+
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding-block: 5px;
+
+    transition: all .2s ;
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.15);
+    }
+  }
 }
 
 /*––––––––––––––––––––––––––––––*/
@@ -975,6 +1004,54 @@ body {
     text-align: center;
     font-size: 20px;
     width: 70%;
+  }
+}
+
+
+/*––––––––––––––––––––––––––––––*/
+/*–––––––––––––––users–––––––––––––––*/
+/*––––––––––––––––––––––––––––––*/
+
+.users {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__title {
+    font-size: 40px;
+    font-weight: 700;
+    padding-top: 100px;
+  }
+
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+    padding-top: 20px;
+    padding-inline: 20px;
+  }
+
+  &__item {
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+    width: 10.5%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    padding-block: 5px;
+
+    transition: all .2s ;
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.15);
+    }
+  }
+
+  &__info {
+    font-size: 18px;
   }
 }
 
