--- a/Idea_platform/main/templates/main/team.html
+++ b/Idea_platform/main/templates/main/team.html
@@ -57,7 +57,7 @@
 
     </div>
     <div class="team__description">{{team.description}}</div>
-    <div class="button">Найти участнков</div>
+    <a href="{% url 'users' %}" class="button">Найти участнков</a>
   </div>
 </div>
 {% endblock  %}
