--- a/Idea_platform/main/templates/main/index.html
+++ b/Idea_platform/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block title %} Idea platform {% endblock %}
+{% block title %} Innova {% endblock %}
 
 {% block content2 %}
 <script src="{% static 'js/script.js' %}" defer></script>
