--- a/Idea_platform/main/templates/main/add_idea.html
+++ b/Idea_platform/main/templates/main/add_idea.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block title %} Add Idea {% endblock %}
+{% block title %} Добавить идею {% endblock %}
 
 {% block content2 %}
 <script src="{% static 'js/nav.js' %}" defer></script>
