--- a/Idea_platform/main/templates/main/login.html
+++ b/Idea_platform/main/templates/main/login.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block title %}login{% endblock %}
+{% block title %}Авторизация{% endblock %}
 
 {% block content2 %}
 <script src="{% static 'js/particles.js' %}"></script>
