--- a/Idea_platform/main/templates/main/profile.html
+++ b/Idea_platform/main/templates/main/profile.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block title %} {{user.first_name}} {{user.last_name}} {% endblock %}
+{% block title %} Профиль  {{user.first_name}} {{user.last_name}} {% endblock %}
 
 {% block content2 %}
 <script src="{% static 'js/nav.js' %}" defer></script>
